# cf-rust-supabase-gemini-api-template

./: .env.example  .gitignore  CHANGELOG.md  CLOUDFLARE_SETUP.md  Cargo.toml  INSTRUCTIONS.md  QUICKSTART.md  README.md  SETUP.md  index.md  wrangler.toml
.agents/skills/: README.md  index.md
.agents/skills/modules/: auth-middleware.md  chat-route.md  gemini-client.md  index.md
.cursor/rules/: project.mdc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
docs/: INIT_TEMPLATE.md
scripts/: init-from-template.mjs
scripts/lib/template-init/: README.md
scripts/lib/template-init/manifests/: cf-hono-gemini-api.js
specs/: log.md
specs/features/: 01-purpose.md  02-health-endpoint.md  03-me-endpoint.md  04-chat-endpoint.md  05-middleware.md  06-environment.md  07-supabase-integration.md  08-gemini-integration.md  09-frontend-pairing.md  10-extension-guidelines.md  index.md
src/: gemini.rs  jwt.rs  lib.rs  models.rs  supabase.rs
templates/: INSTRUCTIONS.md  README.md  package.json  wrangler.toml
