[package]
name = "cf-rust-supabase-gemini-api-template"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Worker API with Rust, Supabase Auth, and Gemini chat"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
worker-macros = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
